[package]
name = "bevy_ecs_dynamic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
bevy_app = { git = "https://github.com/bevyengine/bevy.git" } 
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git" }
fixedbitset = "0.4.2"
